added anime changes and changes_histories migrations
