# src/storage/api-docs/api-docs.json
@@ -74,6 +74,91 @@
                 }
             }
         },
+        "/anime/{id}": {
+            "get": {
+                "tags": [
+                    "Anime"
+                ],
+                "summary": "Display the specified resource.",
+                "operationId": "979b6cb062cde6efe7d9954e59a5b1b6",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "The people id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Display the specified resource",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "404": {
+                        "description": "anime not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/NotFoundRequest"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Anime"
+                ],
+                "summary": "Remove the specified resource from storage.",
+                "operationId": "74be61682e5f411082320be383a702b0",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "The people id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "removed",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "404": {
+                        "description": "anime not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/NotFoundRequest"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ]
+            }
+        },
         "/auth/login": {
             "get": {
                 "tags": [
@@ -193,7 +278,7 @@
                 "operationId": "fe240329edeaa62a22386f07292dd46d",
                 "parameters": [
                     {
-                        "name": "count",
+                        "name": "perPage",
                         "in": "query",
                         "description": "number of people per page",
                         "required": false,
@@ -441,6 +526,19 @@
                         "content": {
                             "application/json": {}
                         }
+                    },
+                    "404": {
+                        "description": "people not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/NotFoundRequest"
+                                    }
+                                }
+                            }
+                        }
                     }
                 },
                 "security": [
@@ -450,13 +548,13 @@
                 ]
             }
         },
-        "/people/{id}/roles": {
+        "/people/{id}/works": {
             "get": {
                 "tags": [
                     "People"
                 ],
-                "summary": "Display a listing of the roles this person",
-                "operationId": "b15e2b493ae7c5c4cd0988b769fa397a",
+                "summary": "Display a listing of the work this person",
+                "operationId": "52ff67ca9fc0322d11de7e05e2bdf666",
                 "parameters": [
                     {
                         "name": "id",
@@ -486,24 +584,32 @@
                         }
                     }
                 }
-            },
-            "delete": {
+            }
+        },
+        "/people/{id}/animes": {
+            "get": {
                 "tags": [
                     "People"
                 ],
-                "summary": "Remove roles this person",
-                "operationId": "ba1bf87913fdc3290583ebf751e00e48",
+                "summary": "Display a listing of the anime list this person",
+                "operationId": "f9da4106f959ee0289ef3d0e46d9eb79",
                 "parameters": [
                     {
-                        "name": "roles",
-                        "in": "query",
-                        "description": "roles",
+                        "name": "id",
+                        "in": "path",
+                        "description": "The people id",
                         "required": true,
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "integer"
-                            }
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "perPage",
+                        "in": "query",
+                        "description": "Count of objects per page. ( 1 <= perPage >= 100 )",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
                         }
                     }
                 ],
@@ -524,21 +630,54 @@
                             }
                         }
                     }
-                },
-                "security": [
-                    {
-                        "Authorization": []
-                    }
-                ]
+                }
             }
         },
-        "/people/{id}/works": {
+        "/people/{id}/mangas": {
             "get": {
                 "tags": [
                     "People"
                 ],
-                "summary": "Display a listing of the work this person",
-                "operationId": "52ff67ca9fc0322d11de7e05e2bdf666",
+                "summary": "Display a listing of the manga list this person",
+                "operationId": "bd7480add95050731611b90c4450e8e8",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "The people id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Display a listing of the resource"
+                    },
+                    "404": {
+                        "description": "not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/NotFoundRequest"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/people/{id}/roles": {
+            "get": {
+                "tags": [
+                    "People"
+                ],
+                "summary": "Display a listing of the roles this person",
+                "operationId": "b15e2b493ae7c5c4cd0988b769fa397a",
                 "parameters": [
                     {
                         "name": "id",
